modify code; list

--- a/LinkedList/002.add-two-numbers.md
+++ b/LinkedList/002.add-two-numbers.md
@@ -33,55 +33,30 @@ Explanation: 342 + 465 = 807.
 ### 解法
 维护进位, 注意边界情况. 最后进位为1要新开辟一个节点.
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
-        if (!l1 && !l2) {
-            return NULL;
-        }
-        
-        if (!l1) {
-            l1 = l2;
-            l2 = NULL;
-        }
-        ListNode *head = l1;
-        
+        ListNode *dummy = new ListNode(0);
+        ListNode *cur = dummy;
         int carry = 0;
-        while (l1 && l2) {
-            int val = l1->val + l2->val + carry;
-            l1->val = val % 10;
-            carry = val / 10;
-            
-            if (!l1->next || !l2->next) {
-                break;
-            }
-            
-            l1 = l1->next;
-            l2 = l2->next;
-        }
         
-        l1->next = (l2 && l2->next) ? l2->next : l1->next;
-        
-        while (l1 && l1->next) {
-            l1 = l1->next;
+        while (l1 || l2) {
+            int val1 = l1 ? l1->val : 0;
+            int val2 = l2 ? l2->val : 0;
+            int sum = val1 + val2 + carry;
+            carry = sum / 10;
+            cur->next = new ListNode(sum % 10);
             
-            int val = l1->val + carry;
-            l1->val = val % 10;
-            carry = val / 10;
+            l1 = l1 ? l1->next : NULL;
+            l2 = l2 ? l2->next : NULL;
+            cur = cur->next;
         }
-        if (carry) {
-            l1->next = new ListNode(carry);
-        }
+        cur->next = carry ? new ListNode(carry) : NULL;
         
-        return head;        
+        cur = dummy->next;
+        delete dummy;
+        
+        return cur;
     }
 };
 ```
