--- a/LinkedList/019.remove-nth-node-from-end-of-list.md
+++ b/LinkedList/019.remove-nth-node-from-end-of-list.md
@@ -40,24 +40,20 @@ Could you do this in one pass?
 ```c++
 class Solution {
 public:
-    ListNode *removeNthFromEnd(ListNode *head, int n) {
-    	if (!head) {
-    		return NULL;
-    	}
-    	ListNode *curr = head, *curr2 = head;
-    	for (int i = 0; i < n+1; i++) {
-    		if (!curr2) {
-    			return head->next;
-    		}
-    		curr2 = curr2->next;
-    	}
-    	while (curr2) {
-    		curr = curr->next;
-    		curr2 = curr2->next;
-    	}
+    ListNode* removeNthFromEnd(ListNode* head, int n) {
+        ListNode *cur1 = head, *cur2 = head;
+        for (int i = 0; i < n; i++) {
+            cur2 = cur2->next;
+        }
+        if (!cur2) return head->next;
         
-    	curr->next = curr->next->next;
-    	return head;
+        while (cur2->next) {
+            cur1 = cur1->next;
+            cur2 = cur2->next;
+        }
+        cur1->next = cur1->next->next;
+        
+        return head;
     }
 };
 ```
