--- a/LinkedList/021.merge-two-sorted-lists.md
+++ b/LinkedList/021.merge-two-sorted-lists.md
@@ -26,36 +26,27 @@ Output: 1->1->2->3->4->4
 ### 解法
 合并
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
-    ListNode *mergeTwoLists(ListNode *head1, ListNode *head2) {
-        ListNode *dummy = new ListNode(-1);
-        ListNode *curr = dummy, *curr1 = head1, *curr2 = head2;
-        while (curr1 && curr2) {
-            if (curr1->val < curr2->val) {
-                curr->next = curr1;
-                curr1 = curr1->next;
+    ListNode* mergeTwoLists(ListNode* l1, ListNode* l2) {
+        ListNode *dummy = new ListNode(0), *cur = dummy;
+        while (l1 && l2) {
+            if (l1->val < l2->val) {
+                cur->next = l1;
+                l1 = l1->next;
             }
             else {
-                curr->next = curr2;
-                curr2 = curr2->next;
+                cur->next = l2;
+                l2 = l2->next;
             }
-            curr = curr->next;
+            cur = cur->next;
         }
         
-        curr->next = curr1 ? curr1 : curr2;
-        curr = dummy->next;
+        cur->next = l1 ? l1 : l2;
+        cur = dummy->next;
         delete dummy;
         
-        return curr;
+        return cur;
     }
 };
 ```
