--- a/LinkedList/023.merge-k-sorted-lists.md
+++ b/LinkedList/023.merge-k-sorted-lists.md
@@ -35,60 +35,45 @@ Output: 1->1->2->3->4->4->5->6
 
 
 ### 解法
-两两merge
+两两merge. 每轮存在list的前(n+1)/2个位置. 
+
+merge的时候i和i+(n+1)/2的两个链表merge, 如果是奇数则刚好剩下(n+1)/2位置的链表不动.
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* mergeKLists(vector<ListNode*>& lists) {
+        if (lists.empty()) return NULL;
         int n = lists.size();
-        if (!n) {
-            return NULL;
-        }
         
         while (n > 1) {
-            vector<ListNode*> mergedLists((n + 1) / 2);
             for (int i = 0; i < n / 2; i++) {
-                mergedLists[i] = merge2List(lists[i], lists[n/2+i]);
+                lists[i] = merge(lists[i], lists[i + (n+1)/2]);
             }
-            if (n % 2) {
-                mergedLists[n/2] = lists[n-1];
-            }
-            
-            lists = mergedLists;
-            n = lists.size();
+            n = (n + 1) / 2;
         }
         
         return lists[0];
     }
     
-    ListNode *merge2List(ListNode *head1, ListNode *head2) {
-        ListNode *dummy = new ListNode(-1);
-        ListNode *curr = dummy, *curr1 = head1, *curr2 = head2;
-        while (curr1 && curr2) {
-            if (curr1->val < curr2->val) {
-                curr->next = curr1;
-                curr1 = curr1->next;
+    ListNode *merge(ListNode *l1, ListNode *l2) {
+        ListNode *dummy = new ListNode(0);
+        ListNode *cur = dummy;
+        while (l1 && l2) {
+            if (l1->val < l2->val) {
+                cur->next = l1;
+                l1 = l1->next;
             }
             else {
-                curr->next = curr2;
-                curr2 = curr2->next;
+                cur->next = l2;
+                l2 = l2->next;
             }
-            curr = curr->next;
+            cur = cur->next;
         }
+        cur->next = l1 ? l1 : l2;
         
-        curr->next = curr1 ? curr1 : curr2;
-        curr = dummy->next;
+        cur = dummy->next;
         delete dummy;
-        
-        return curr;
+        return cur;
     }
 };
 ```
