--- a/LinkedList/025.reverse-nodes-in-k-group.md
+++ b/LinkedList/025.reverse-nodes-in-k-group.md
@@ -45,58 +45,43 @@ For k = 3, you should return: 3->2->1->4->5
 ### 解法
 记录反转部分的头尾, 反转后更新头尾指针. 每次扫描总是从这一段之前一个节点开始, 这样可以到达末尾并把末尾的next置0.
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* reverseKGroup(ListNode* head, int k) {
-        ListNode *dummy = new ListNode(-1);
+        ListNode *dummy = new ListNode(0);
         dummy->next = head;
-        ListNode *prev = dummy;
+        ListNode *prev = dummy, *cur = dummy;
         
-        ListNode *curr = dummy;
-        while (curr) {
+        while (cur) {
             for (int i = 0; i < k; i++) {
-                if (!curr) {
-                    break;
-                }
-                curr = curr->next;
+                if (!cur) break;
+                cur = cur->next;
             }
-            if (!curr) {
-                break;
-            }
+            if (!cur) break;
             
-            ListNode *next = curr->next;
-            curr->next = NULL;
-            
+            ListNode *next = cur->next;
+            cur->next = NULL;
             reverse(prev->next);
             
-            ListNode *temp = prev->next;
-            temp->next = next;
-            prev->next = curr;
+            ListNode *tmp = prev->next;
+            prev->next = cur;
+            tmp->next = next;
             
-            prev = temp;
-            curr = prev;
+            prev = tmp;
+            cur = prev;
         }
         
         head = dummy->next;
         delete dummy;
-        
         return head;
     }
     
     void reverse(ListNode *head) {
-        ListNode *prev = NULL, *curr = head, *next = head ? head->next : NULL;
-        while (curr) {
-            curr->next = prev;
-            prev = curr;
-            curr = next;
+        ListNode *prev = NULL, *cur = head, *next = cur ? cur->next : NULL;
+        while (cur) {
+            cur->next = prev;
+            prev = cur;
+            cur = next;
             next = next ? next->next : NULL;
         }
     }
