--- a/LinkedList/061.rotate-list.md
+++ b/LinkedList/061.rotate-list.md
@@ -55,43 +55,35 @@ rotate 4 steps to the right:2->0->1->NULL
 ### 解法
 一次遍历记录长度, 再找到倒数第k%n个节点的前一节点, 断开, 注意循环条件为while (curr2->next)
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* rotateRight(ListNode* head, int k) {
-        if (!head) {
-            return NULL;
-        }
+        if (!head || k <= 0) return head;
+        
+        ListNode *cur1, *cur2;
         
         int n = 0;
-        ListNode *curr = head;
-        while (curr) {
+        cur1 = head;
+        while (cur1) {
             n++;
-            curr = curr->next;
+            cur1 = cur1->next;
         }
         k %= n;
         
-        ListNode *curr2 = head;
+        cur2 = head;
         for (int i = 0; i < k; i++) {
-            curr2 = curr2->next;
+            cur2 = cur2->next;
         }
         
-        curr = head;
-        while (curr2->next) {
-            curr = curr->next;
-            curr2 = curr2->next;
+        cur1 = head;
+        while (cur2->next) {
+            cur1 = cur1->next;
+            cur2 = cur2->next;
         }
         
-        curr2->next = head;
-        head = curr->next;
-        curr->next = NULL;
+        cur2->next = head;
+        head = cur1->next;
+        cur1->next = NULL;
         
         return head;
     }
