--- a/LinkedList/083.remove-duplicates-from-sorted-list.md
+++ b/LinkedList/083.remove-duplicates-from-sorted-list.md
@@ -42,17 +42,11 @@ Output: 1->2->3
 class Solution {
 public:
     ListNode* deleteDuplicates(ListNode* head) {
-        ListNode *prev = head, *curr = head ? head->next : NULL;
-        while (curr) {
-            if (curr->val == prev->val) {
-                prev->next = curr->next;
-            }
-            else {
-                prev = prev->next;
-            }
-            curr = curr->next;
+        ListNode *cur = head;
+        while (cur && cur->next) {
+            if (cur->next->val == cur->val) cur->next = cur->next->next;
+            else cur = cur->next;
         }
-        
         return head;
     }
 };
