--- a/LinkedList/092.reverse-linked-list-ii.md
+++ b/LinkedList/092.reverse-linked-list-ii.md
@@ -35,54 +35,42 @@ Output: 1->4->3->2->5->NULL
 
 ### 解法
 找到自链表的头尾, 将尾置空, 反转子链表; 开始时保存子链表前一个和后一个节点, 反转结束接回去.
+类似上一题, 但只在满足cur in (m,n]范围内反转. 并且记录前后四个位置的指针.
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* reverseBetween(ListNode* head, int m, int n) {
-        ListNode *dummy = new ListNode(-1);
-        dummy->next = head;
+        ListNode *prev = NULL, *cur = head, *next = cur ? cur->next : NULL;
+        ListNode *prevTail = NULL, *curTail = NULL, *curHead = NULL, *nextHead = NULL;
         
-        ListNode *prev = dummy;
-        for (int i = 0; i < m-1; i++) {
-            prev = prev->next;
-        }
-        ListNode *subHead = prev->next;
-        
-        ListNode *subTail = subHead;
-        for (int i = 0; i < n - m; i++) {
-            subTail = subTail->next;
-        }
-        ListNode *next = subTail ? subTail->next : NULL;
-        subTail->next = NULL;
-        
-        reverse(subHead);
-        
-        prev->next = subTail;
-        subHead->next = next;
-        
-        head = dummy->next;
-        delete dummy;
-        
-        return head;
-    }
-    
-    void reverse(ListNode *head) {
-        ListNode *prev = NULL, *curr = head, *next = head ? head->next : NULL;
-        
-        while (curr) {
-            curr->next = prev;
-            prev = curr;
-            curr = next;
+        int cnt = 1;
+        while (cur) {
+            if (cnt == m) {
+                prevTail = prev;
+                curTail = cur;
+            }
+            else if (cnt > m && cnt <= n) {
+                cur->next = prev;
+            }
+            
+            if (cnt == n) {
+                curHead = cur;
+                nextHead = next;
+                break;
+            }
+            
+            cnt++;
+            prev = cur;
+            cur = next;
             next = next ? next->next : NULL;
         }
+        
+        
+        if (prevTail) prevTail->next = curHead;
+        else head = curHead;
+        if (curTail) curTail->next = nextHead;
+        
+        return head;
     }
 };
 ```
