--- a/LinkedList/109.convert-sorted-list-to-binary-search-tree.md
+++ b/LinkedList/109.convert-sorted-list-to-binary-search-tree.md
@@ -44,43 +44,23 @@ One possible answer is: [0,-3,9,-10,null,5], which represents the following heig
     - 右: [mid->next, tail)
 - 初始tail为NULL
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     TreeNode* sortedListToBST(ListNode* head) {
-        return convert(head, NULL);
-    }
-    
-    TreeNode* convert(ListNode *head, ListNode *tail) {
-        if (head == tail) {
-            return NULL;
-        }
+        if (!head) return NULL;
+        if (!head->next) return new TreeNode(head->val);
         
-        ListNode *fast = head, *slow = head;
-        while (fast != tail && fast->next != tail) {
+        ListNode *fast = head, *slow = head, *prev = NULL;
+        while (fast && fast->next) {
+            prev = slow;
             slow = slow->next;
             fast = fast->next->next;
         }
+        prev->next = NULL;
         
         TreeNode *root = new TreeNode(slow->val);
-        root->left = convert(head, slow);
-        root->right = convert(slow->next, tail);
+        root->left = sortedListToBST(head);
+        root->right = sortedListToBST(slow->next);
         
         return root;
     }
