--- a/LinkedList/138.copy-list-with-random-pointer.md
+++ b/LinkedList/138.copy-list-with-random-pointer.md
@@ -21,53 +21,36 @@ Return a deep copy of the list.
 - 复制每个随机指针
 - 将链表拆分为两个
 ```c++
-/**
- * Definition for singly-linked list with a random pointer.
- * struct RandomListNode {
- *     int label;
- *     RandomListNode *next, *random;
- *     RandomListNode(int x) : label(x), next(NULL), random(NULL) {}
- * };
- */
 class Solution {
 public:
     RandomListNode *copyRandomList(RandomListNode *head) {
-        if (!head) {
-            return NULL;
-        }
+        if (!head) return NULL;
         
-        RandomListNode *curr = head;
+        RandomListNode *curr = head, *copy;
         while (curr) {
-            RandomListNode *copy = new RandomListNode(curr->label);
+            copy = new RandomListNode(curr->label);
             copy->next = curr->next;
             curr->next = copy;
             curr = copy->next;
         }
         
-        RandomListNode *headCopy = head->next;
-        RandomListNode *currCopy = headCopy;
-        curr = head;
+        RandomListNode *rhead = head->next;
+        curr = head, copy = rhead;
         while (curr) {
-            if (curr->random) {
-                currCopy->random = curr->random->next;
-            }
-            else {
-                currCopy->random = NULL;
-            }
-            curr = currCopy->next;
-            currCopy = curr ? curr->next : NULL;
+            copy->random = curr->random ? curr->random->next : NULL;
+            curr = copy->next;
+            copy = curr ? curr->next : NULL;
         }
         
-        curr = head;
-        currCopy = headCopy;
+        curr = head, copy = rhead;
         while (curr) {
-            curr->next = currCopy->next;
+            curr->next = copy->next;
             curr = curr->next;
-            currCopy->next = curr ? curr->next : NULL;
-            currCopy = currCopy->next;
+            copy->next = curr ? curr->next : NULL;
+            copy = copy->next;
         }
         
-        return headCopy;
+        return rhead;
     }
 };
 ```
