--- a/LinkedList/141.linked-list-cycle.md
+++ b/LinkedList/141.linked-list-cycle.md
@@ -21,31 +21,16 @@ Can you solve it without using extra space?
 ### 解法
 fast slow
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     bool hasCycle(ListNode *head) {
-        if (!head) {
-            return NULL;
+        ListNode *cur1 = head, *cur2 = head;
+        while (cur1 && cur1->next) {
+            cur1 = cur1->next->next;
+            cur2 = cur2->next;
+            if (cur1 == cur2) return true;
         }
-        
-        ListNode *slow = head, *fast = head;
-        while (fast && fast->next) {
-            slow = slow->next;
-            fast = fast->next->next;
-            if (slow == fast) {
-                break;
-            }
-        }
-        
-        return fast && fast->next;
+        return false;
     }
 };
 ```
