--- a/LinkedList/143.reorder-list.md
+++ b/LinkedList/143.reorder-list.md
@@ -47,50 +47,42 @@ Given 1->2->3->4->5, reorder it to 1->5->2->4->3.
 class Solution {
 public:
     void reorderList(ListNode* head) {
-        if (!head || !head->next) {
-            return;
-        }    
-        ListNode *firstTail = findMid(head);
-        ListNode *head2 = firstTail->next;
-        firstTail->next = NULL;
-        head2 = reverse(head2);
-        combine(head, head2);
-    }
-    ListNode *findMid(ListNode *head) {
-        ListNode *slow = head, *fast = head, *prev = NULL;
-        while (fast && fast->next) {
-            prev = slow;
-            slow = slow->next;
-            fast = fast->next->next;
+        if (!head || !head->next) return;
+        
+        ListNode *cur1 = head, *cur2 = head, *prev = NULL;
+        while (cur1 && cur1->next) {
+            prev = cur2;
+            cur1 = cur1->next->next;
+            cur2 = cur2->next;
         }
-        return prev;
-    }
-    ListNode* reverse(ListNode *head) {
-        if (!head) {
-            return NULL;
+        prev->next = NULL;
+        cur1 = head;
+        cur2 = reverse(cur2);
+        
+        ListNode *dummy = new ListNode(0);
+        ListNode *cur = dummy;
+        while (cur1 && cur2) {
+            cur->next = cur1;
+            cur1 = cur1->next;
+            cur = cur->next;
+            cur->next = cur2;
+            cur2 = cur2->next;
+            cur = cur->next;
         }
-        ListNode *prev = NULL, *curr = head, *next = curr->next;
-        while (curr) {
-            curr->next = prev;
-            prev = curr;
-            curr = next;
+        
+        head = dummy->next;
+        delete dummy;
+    }
+    
+    ListNode *reverse(ListNode *head) {
+        ListNode *prev = NULL, *cur = head, *next = cur ? cur->next : NULL;
+        while (cur) {
+            cur->next = prev;
+            prev = cur;
+            cur = next;
             next = next ? next->next : NULL;
         }
         return prev;
-    }
-    void combine(ListNode *head1, ListNode *head2) {
-        ListNode *dummy = new ListNode(0);
-        ListNode *curr = dummy;
-        while (head1 && head2) {
-            curr->next = head1;
-            curr = curr->next;
-            head1 = head1->next;
-            curr->next = head2;
-            curr = curr->next;
-            head2 = head2->next;
-        }
-        head1 = dummy->next;
-        delete dummy;
     }
 };
 ```
