--- a/LinkedList/146.lru-cache.md
+++ b/LinkedList/146.lru-cache.md
@@ -56,7 +56,7 @@ cache.get(4);       // returns 4
 
 ### 解法
 - 维护一个双向链表, 按访问顺序存储cache中的键值对; 
-- 维护一个map, 存<key, 链表节点>
+- 维护一个map, 存 {key, 链表节点}
 ### get
 - 不存在返回-1
 - 存在则更新, 并把节点移到链表头
