--- a/LinkedList/147.insertion-sort-list.md
+++ b/LinkedList/147.insertion-sort-list.md
@@ -60,34 +60,24 @@ Output: -1->0->3->4->5
 - 每次先判断前指针的next, 满足再移.
 - 先计算next, 防止null越界.
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* insertionSortList(ListNode* head) {
-        if (!head) {
-            return NULL;
-        }
+        if (!head) return NULL;
         
-        ListNode *dummy = new ListNode(-1);
-        ListNode *prev = dummy, *curr = head, *next;
+        ListNode *dummy = new ListNode(0);
         
-        while (curr) {
-            next = curr->next;
-            while (prev->next && prev->next->val < curr->val) {
+        ListNode *cur = head;
+        while (cur) {
+            ListNode *prev = dummy, *next = cur->next;
+            
+            while (prev->next && prev->next->val < cur->val) {
                 prev = prev->next;
             }
-            curr->next = prev->next;
-            prev->next = curr;
+            cur->next = prev->next;
+            prev->next = cur;
             
-            curr = next;
-            prev = dummy;
+            cur = next;
         }
         
         head = dummy->next;
