--- a/LinkedList/206.reverse-linked-list.md
+++ b/LinkedList/206.reverse-linked-list.md
@@ -29,20 +29,38 @@ Output: 5->4->3->2->1->NULL
 Follow up:
 A linked list can be reversed either iteratively or recursively. Could you implement both?
 
-### 解法
-三个指针
+### 解法1
+循环: 三个指针
 ```c++
 class Solution {
 public:
     ListNode* reverseList(ListNode* head) {
-        ListNode *prev = NULL, *curr = head, *next = head ? head->next : NULL;
-        while (curr) {
-            curr->next = prev;
-            prev = curr;
-            curr = next;
+        ListNode *prev = NULL, *cur = head, *next = cur ? cur->next : NULL;
+        while (cur) {
+            cur->next = prev;
+            prev = cur;
+            cur = next;
             next = next ? next->next : NULL;
         }
         return prev;
+    }
+};
+```
+
+### 解法2
+递归
+```c++
+class Solution {
+public:
+    ListNode* reverseList(ListNode* head) {
+        return reverseListKernel(head, NULL);
+    }
+    
+    ListNode *reverseListKernel(ListNode *head, ListNode *prev) {
+        if (!head) return prev;
+        ListNode *next = head->next;
+        head->next = prev;
+        return revereseListKernel(next, head);
     }
 };
 ```
