--- a/LinkedList/024.swap-nodes-in-pairs.md
+++ b/LinkedList/024.swap-nodes-in-pairs.md
@@ -34,23 +34,14 @@ Given 1->2->3->4, you should return the list as 2->1->4->3.
 ### 解法
 三个指针: prev, first, second, 注意判断NULL.
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* swapPairs(ListNode* head) {
-        ListNode *dummy = new ListNode(-1);
-        dummy->next = head;
+        if (!head || !head->next) return head;
         
-        ListNode *prev = dummy;
-        ListNode *first = dummy->next;
-        ListNode *second = first ? first->next : NULL;
+        ListNode *dummy = new ListNode(0);
+        dummy->next = head;
+        ListNode *prev = dummy, *first = head, *second = head->next;
         
         while (first && second) {
             prev->next = second;
