--- a/LinkedList/086.partition-list.md
+++ b/LinkedList/086.partition-list.md
@@ -32,42 +32,27 @@ Output: 1->2->2->4->3->5
 - 注意新链表末尾要置空.
 
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* partition(ListNode* head, int x) {
-        ListNode *dummy = new ListNode(-1);
-        dummy->next = head;
-        ListNode *curr = dummy;
-        
-        ListNode *large = new ListNode(-1);
-        ListNode *currL = large;
-        
-        while (curr->next) {
-            if (curr->next->val >= x) {
-                currL->next = curr->next;
-                currL = currL->next;
-                
-                curr->next = curr->next->next;
+        ListNode *small = new ListNode(0), *large = new ListNode(0);
+        ListNode *cur_s = small, *cur_l = large, *cur = head;
+        while (cur) {
+            if (cur->val < x) {
+                cur_s->next = cur;
+                cur_s = cur_s->next;
             }
             else {
-                curr = curr->next;
+                cur_l->next = cur;
+                cur_l = cur_l->next;
             }
+            cur = cur->next;
         }
+        cur_s->next = large->next;
+        cur_l->next = NULL;
+        head = small->next;
         
-        currL->next = NULL;
-        curr->next = large->next;
-        head = dummy->next;
-        
-        delete dummy;
-        delete large;
+        delete small, large;
         
         return head;
     }
