--- a/LinkedList/148.sort-list.md
+++ b/LinkedList/148.sort-list.md
@@ -43,22 +43,12 @@ Output: -1->0->3->4->5
 - 将前一个链表末尾置为NULL可简化判断;
 - 找到中点的方法: slow, fast 两个指针
 ```c++
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* sortList(ListNode* head) {
-        if (!head || !head->next) {
-            return head;
-        }
+        if (!head || !head->next) return head;
         
-        ListNode *prev = NULL, *slow = head, *fast = head;
+        ListNode *slow = head, *fast = head, *prev = NULL;
         while (fast && fast->next) {
             prev = slow;
             slow = slow->next;
@@ -75,26 +65,23 @@ public:
     }
     
     ListNode *merge(ListNode *head1, ListNode *head2) {
-        ListNode *dummy = new ListNode(-1);
-        ListNode *curr = dummy;
+        ListNode *dummy = new ListNode(0), *cur = dummy;
         while (head1 && head2) {
             if (head1->val < head2->val) {
-                curr->next = head1;
+                cur->next = head1;
                 head1 = head1->next;
             }
             else {
-                curr->next = head2;
+                cur->next = head2;
                 head2 = head2->next;
             }
-            curr = curr->next;
+            cur = cur->next;
         }
-        
-        curr->next = head1 ? head1 : head2;
-        
-        curr = dummy->next;
+        cur->next = head1 ? head1 : head2;
+        cur = dummy->next;
         delete dummy;
         
-        return curr;
+        return cur;
     }
 };
 ```
