--- a/LinkedList/237.delete-node-in-a-linked-list.md
+++ b/LinkedList/237.delete-node-in-a-linked-list.md
@@ -64,7 +64,7 @@ Explanation: You are given the third node with value 1, the linked list
 	Do not return anything from your function.
 	
 ### 解法
-修改. O(1)
+修改节点的值. O(1).
 ```c++
 class Solution {
 public:
