--- a/LinkedList/328.odd-even-linked-list.md
+++ b/LinkedList/328.odd-even-linked-list.md
@@ -117,9 +117,9 @@ public:
         if (!head) return head;
         ListNode *odd = head, *even = head->next, *evenHead = even;
         while (even && even->next) {
-            odd->next = odd->next->next;
-            even->next = even->next->next;
+            odd->next = even->next;
             odd = odd->next;
+            even->next = odd->next;
             even = even->next;
         }
         odd->next = evenHead;
